# triangle

./: .gitignore  CMakeLists.txt  showme.c  triangle.cpp  triangle.h
.cmake/api/v1/reply/: cache-v2-3727ff616cb6485f569a.json  codemodel-v2-c659c3b27e4a005a4f69.json  index-2021-08-26T19-01-01-0113.json  target-triangle-7c3f056c3cc90106069f.json  target-triangle_exec-33d6c601a064559342d1.json
include/: triangle.h
src/: triangle.cpp
